# -easypresenter_rust

./: Cargo.toml  installer.iss
.github/workflows/: build.yml
assets/: easy-presenter.desktop
data/: cantos.db  cantos.db-shm  cantos.db-wal  config.json
src/: main.rs
ui/: main_ui.slint  projector_ui.slint
