[package]
name = "easy-presenter-slint"
version = "1.0.0"
edition = "2021"
build = "build.rs"


[dependencies]
slint = "1.8.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = "0.8.20"
rayon = "1.10"
image = "0.25"
directories = "5.0"
rfd = "0.14" # NUEVO: Para abrir diálogos de selección de archivos nativos
regex = "1"
display-info = "0.4"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"

[build-dependencies]
slint-build = "1.8.0"
